--- a/index.html
+++ b/index.html
@@ -642,8 +642,7 @@
         }
         
         navigator.geolocation.getCurrentPosition(
-          async (position) => 
-          {
+          async (position) => {
             try 
             {
               // Log geolocation data for debugging
